--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "outDir": "./lib",
-    "target": "es2022",
+    "target": "esnext",
     "lib": [
       "dom",
       "dom.iterable",
